ci/kubernetes/skylunch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skylunch-deployment
  namespace: skylunch
  labels:
    app: skylunch
spec:
  replicas: 2
  selector:
    matchLabels:
      app: skylunch
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: skylunch
    spec:
      containers:
        - name: skylunch
          image: siph/skylunch:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
