ci/kubernetes/skylunch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skylunch-service
  namespace: skylunch
spec:
  type: LoadBalancer
  selector:
    app: skylunch
  ports:
    - port: 8081
      targetPort: 8080
