ci/kubernetes/skylunch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skylunch-traefik-ingress
  namespace: skylunch
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: skylunch.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skylunch-service
                port:
                  number: 8080
  tls:
    - hosts:
        - skylunch.cloud
      secretName: letsencrypt-tls
